Convert HTML prototype to Hugo templates with Stripe integration - Remove theme dependency and fix CSS processing

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
     <!-- Styles -->
     {{ $css := resources.Get "css/main.css" }}
     {{ if $css }}
-        {{ $css = $css | resources.ToCSS | resources.Minify }}
+        {{ $css = $css | resources.Minify }}
         <link rel="stylesheet" href="{{ $css.RelPermalink }}">
     {{ end }}
     
