bg revision, theme(s) revision, title mod

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <nav class="container">
-            <a href="{{ .Site.BaseURL }}" class="logo">{{ .Site.Title }}</a>
+            <a href="{{ .Site.BaseURL }}" class="logo">wittle guys!!</a>
             <ul class="nav-links">
                 {{ range .Site.Menus.main }}
                 <li><a href="{{ .URL }}">{{ .Name }}</a></li>
