favicon & logo revision, removed old products

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,7 +20,7 @@
     {{ end }}
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon/caterpillar.png">
+    <link rel="icon" type="image/png" href="/favicon/Caterpillar.png">
 </head>
 <body>
     <header>
@@ -67,7 +67,7 @@
                 🛒
                 <span class="cart-count" id="cart-count">0</span>
             </div>
-            <a href="/" class="site-logo" style="margin-left: 2rem;"><img src="/images/logo.png" alt="Wittle Guys Logo" style="height: 56px; width: auto;"></a>
+            <a href="/" class="site-logo" style="margin-left: 2rem;"><img src="/images/Logo.png" alt="Wittle Guys Logo" style="height: 56px; width: auto;"></a>
         </nav>
     </header>
 
