Footer tweaks, implemented function to make year update automatically

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -96,7 +96,7 @@
                     {{ end }}
                 </div>
             </div>
-            <p>&copy; {{ now.Year }} {{ .Site.Title }}. All rights reserved.</p>
+            <p>© {{ now.Year }} wittle guys. All wites weserved. (All rights reserved)</p>
         </div>
     </footer>
 
