--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -90,10 +90,11 @@
                 <div class="footer-section">
                     <h3>Follow Us</h3>
                     {{ with .Site.Params.social }}
-                        {{ with .instagram }}<p><a href="{{ . }}">Instagram</a></p>{{ end }}
-                        {{ with .facebook }}<p><a href="{{ . }}">Facebook</a></p>{{ end }}
-                        {{ with .twitter }}<p><a href="{{ . }}">Twitter</a></p>{{ end }}
+                        {{ with .instagram }}<p><a href="{{ . }}" style="display: flex; align-items: center; gap: 0.5em;"><span style="display:inline-block;vertical-align:middle;">{{/* Instagram SVG */}}<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#aef6e2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/></svg></span>Instagram</a></p>{{ end }}
+                        {{ with .facebook }}<p><a href="{{ . }}" style="display: flex; align-items: center; gap: 0.5em;"><span style="display:inline-block;vertical-align:middle;">{{/* Facebook SVG */}}<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#aef6e2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H5v4h5v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg></span>Facebook</a></p>{{ end }}
+                        {{ with .twitter }}<p><a href="{{ . }}" style="display: flex; align-items: center; gap: 0.5em;"><span style="display:inline-block;vertical-align:middle;">{{/* Twitter SVG */}}<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#aef6e2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53A4.48 4.48 0 0 0 22.43.36a9.09 9.09 0 0 1-2.88 1.1A4.48 4.48 0 0 0 16.5 0c-2.5 0-4.5 2-4.5 4.5 0 .35.04.7.1 1.03A12.94 12.94 0 0 1 3 1.1a4.48 4.48 0 0 0-.61 2.27c0 1.56.8 2.93 2.02 3.74A4.48 4.48 0 0 1 2 6.13v.06c0 2.18 1.55 4 3.8 4.42a4.52 4.52 0 0 1-2.02.08c.57 1.78 2.23 3.08 4.2 3.12A9.05 9.05 0 0 1 1 19.54a12.8 12.8 0 0 0 6.95 2.04c8.36 0 12.94-6.93 12.94-12.94 0-.2 0-.39-.01-.58A9.22 9.22 0 0 0 23 3z"/></svg></span>Twitter</a></p>{{ end }}
                     {{ end }}
+                    <p><a href="https://www.etsy.com/shop/WittleGuys" style="display: flex; align-items: center; gap: 0.5em;"><span style="display:inline-block;vertical-align:middle;">{{/* Etsy SVG */}}<svg width="20" height="20" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="32" height="32" rx="6" fill="none"/><path d="M8 8h16v16H8V8zm2.5 2.5v11h9v-2h-7v-2h6v-2h-6v-2h7v-2h-9z" fill="#aef6e2"/></svg></span>Etsy</a></p>
                 </div>
             </div>
             <p>© {{ now.Year }} wittle guys. All wites weserved. (All rights reserved)</p>
