added cart.js to baseof.html

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -130,5 +130,7 @@
       window.STRIPE_PUBLISHABLE_KEY = "***REMOVED***51RbkoIGDLGsdgzhZpNitRIAQjIBIfiaQHtXtd4KDntlmZyt4LkvIxaiUyBEvEgvXPG1p7ndaIyZgq1Spv5yzB3Rw00EYNgTiYi"; // Replace with your Stripe test publishable key
       window.BACKEND_URL = "http://localhost:3001";
     </script>
+    <!-- Load cart.js -->
+    <script src="/js/cart.js"></script>
 </body>
 </html>
