Revisions to baseof.html

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -115,22 +115,11 @@
     </div>
 
     <!-- Scripts -->
-    {{ $js := resources.Get "js/cart.js" }}
-    {{ if $js }}
-        {{ $js = $js | resources.Minify }}
-        <script src="{{ $js.RelPermalink }}"></script>
-    {{ end }}
-    
-    <!-- Initialize Stripe -->
-    <script>
-        // Initialize Stripe (Replace with your publishable key)
-        const stripe = Stripe('{{ .Site.Params.stripe.publishableKey | default "***REMOVED***YOUR_STRIPE_PUBLISHABLE_KEY_HERE" }}');
-    </script>
+    <!-- Remove Hugo asset pipeline for cart.js and old Stripe init -->
     <script>
       window.STRIPE_PUBLISHABLE_KEY = "***REMOVED***51RbkoIGDLGsdgzhZpNitRIAQjIBIfiaQHtXtd4KDntlmZyt4LkvIxaiUyBEvEgvXPG1p7ndaIyZgq1Spv5yzB3Rw00EYNgTiYi"; // Replace with your Stripe test publishable key
       window.BACKEND_URL = "http://localhost:3001";
     </script>
-    <!-- Load cart.js -->
     <script src="/js/cart.js"></script>
 </body>
 </html>
