--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -19,7 +19,7 @@
         </div>
         {{ if .Params.stripe_price_id }}
         <div style="margin-top: 2rem; text-align: center;">
-            <button class="btn" onclick="addToCart('{{ .File.BaseFileName }}', '{{ .Title }}', {{ .Params.price }}, '{{ .Params.image }}', '{{ .Params.stripe_price_id }}')">
+            <button class="btn" onclick="addToCart('{{ with .File }}{{ .BaseFileName }}{{ else }}{{ .Title | urlize }}{{ end }}', '{{ .Title }}', {{ .Params.price }}, '{{ .Params.image }}', '{{ .Params.stripe_price_id }}')">
                 <span class="btn-text">Add to Cart</span>
                 <div class="loading">
                     <div class="spinner"></div>
