--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -64,11 +64,7 @@
                 {{ end }}
             </ul>
             <div class="cart-icon" onclick="showCart()" style="position:relative;cursor:pointer;">
-              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#3ec6a8" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align:middle;">
-                <circle cx="9" cy="21" r="1.7" fill="#3ec6a8"/>
-                <circle cx="19" cy="21" r="1.7" fill="#3ec6a8"/>
-                <path d="M1 1h2l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
-              </svg>
+              <img src="/images/cart.png" alt="Cart" style="height: 32px; width: 32px; vertical-align: middle; filter: drop-shadow(0 2px 6px #1e3228aa);">
               <span class="cart-count" id="cart-count" style="position:absolute;top:0.2em;right:0.2em;background:#3ec6a8;color:#1e3228;border-radius:50%;padding:0.1em 0.5em;font-size:1em;font-weight:700;">0</span>
             </div>
             <a href="/" class="site-logo" style="margin-left: 2rem;"><img src="/images/Logo.png" alt="Wittle Guys Logo" style="height: 56px; width: auto;"></a>
